NOCC 1.9.0  ???? ??, ????

  Feature Requests
    * RFE #2985080 : Group items in character encoding list (Tim Gerundt).

  Misc
    * Fix a problem with shorted subjects in inbox (Tim Gerundt).
    * Don't show none attachment images (Tim Gerundt).
    * Remove Unicode "byte order mark" (BOM) from images (Tim Gerundt).
    * Use "Part X" as filename for attachments without name (Tim Gerundt).
    * Add BMP to the supported image formats (Tim Gerundt).
    * Add debug level for developers (Tim Gerundt).
    * Drop $conf->display_rfc822 (Tim Gerundt).
    * Fix a problem with mails that has no text but attachments (Tim Gerundt).
    * If hide addresses in inbox, hide double quotes too (Tim Gerundt).
    * Fix a problem with invalid multipart mails (Tim Gerundt).
    * Switch to PHP 5 (Tim Gerundt).

NOCC 1.8.3  June 04, 2010

  Bugs
    * Bug #2836784 : imap_utf8() returns only capital letters since PHP 5.2.5
      (Tim Gerundt).
    * Bug #2962990 : full_name preference not quoted in email send (Sean Skogen).
    * Bug #2987135 : Add second "Re:" by reply (Tim Gerundt).
    * Bug #2963603 : Function name tripos instead of stripos, typo? (openfan).
    * Bug #2960858 : Exception incorrectly handled: break instead of exit?
     (openfan).
    * Bug #2952899 : dropdown list with themes is not filled on login page
     (openfan).
    * Bug #2952928 : Title contact list window incorrect: Contact list of %1$
     (openfan).
    * Bug #2946163 : Unable to copy or move the message... (Evgeny Secret).

  Feature Requests
    * RFE #2985090 : Simplify character encoding list items (Tim Gerundt).
    * RFE #2976406 : Check for SPAM header flags (Tim Gerundt).

  Misc
    * Tweak linking of URLs in text mails (Tim Gerundt).
    * Simplify attachments list (Tim Gerundt).
    * Fix problem with "Attachments:" label (Tim Gerundt).
    * Drop $conf->display_part_no (Tim Gerundt).
    * Fix empty attachment names in some cases (Tim Gerundt).